--- a/app/src/locales/ja-JP.json
+++ b/app/src/locales/ja-JP.json
@@ -1,5 +1,6 @@
 {
-  "banner__message": "このサイトはどうやって動いてるの？",
+  "installer__cancel": "閉じる",
+  "installer__alternative": "ブラウザから「ホーム画面に追加」をするとアプリをインストールできます。",
 
   "products__mypad__name": "MyPad",
   "products__mypad__description": "\"毎日使うものこそ、美しく便利なものを...\" そんな想いで作られたテキストエディタが MyPad です。視認性に優れるモダンな外観に、使い慣れたクラシックな操作性を兼ね備え、様々な用途にご利用頂けます。",
